versioned_docs/version-1.19/get-started/install/digitalocean-doks.mdx
---
title:  DigitalOcean Kubernetes (DOKS)
description: How to install Okteto onto DigitalOcean Kubernetes
sidebar_label: DigitalOcean DOKS
id: digitalocean-doks
pagination_prev: get-started/install/index
pagination_next: get-started/install-okteto-cli
---

import variables from '../../variables.json';
import CodeBlock from '@theme/CodeBlock';

This guide will walk you through the process of installing Okteto in DigitalOcean Kubernetes.

## Installation Requirements

Before you start, make sure you have the following CLIs installed in your machine:

- `kubectl` >= 1.28 ([kubectl installation guides](https://kubernetes.io/docs/tasks/tools/#kubectl))
- `helm` >= 3.14 ([helm installation guides](https://helm.sh/docs/intro/install/))

You'll also need the following:

- An Okteto License
- A Domain and the ability to create wildcard DNS records for it
- A Kubernetes cluster

## Getting your Okteto License

A license is mandatory to use Okteto. You'll receive a license key as part of your subscription to Okteto. If you haven't received it, [please open a support ticket](https://okteto.com/support).

If you are interested in evaluating Okteto, [sign up for our free 30 days trial](https://www.okteto.com/free-trial/). No credit card required.

## A Domain and the ability to create wildcard DNS records for it

You'll need sufficient access to a [subdomain](self-hosted/helm-configuration.mdx#subdomain) to add a wildcard DNS record, such as dev.example.com.
By default, all endpoints created by Okteto for your development environments will be exposed on the wildcard subdomain you choose.

This guide assumes your domain is registered in [DigitalOcean Domains](https://cloud.digitalocean.com/networking/domains).
You can use any DNS service you prefer, but this guide focuses specifically on DigitalOcean Domains.

## Deploy a Kubernetes cluster

If you are not familiar with this step, we recommend that you follow DigitalOcean's [cluster creation guide](https://www.digitalocean.com/docs/kubernetes/how-to/create-clusters/).

Okteto supports Kubernetes versions {variables.kubernetesMinVersion} through {variables.kubernetesMaxVersion}.
To get started with Okteto, we recommend that you create a Kubernetes cluster with the following configuration:

- Kubernetes v{variables.kubernetesMaxVersion}
- A pool with at least 3 nodes (4CPUs and 16GBs each)
- 250 GB per disk

## Installing Okteto

Okteto is installed using a Helm chart. Let's start the process:

### Add the Okteto Helm repository

You'll need to add the Okteto Helm repository to be able to install Okteto:

```bash
helm repo add okteto https://charts.okteto.com
helm repo update
```

### Create the Helm configuration file

In order to install Okteto you need to first create a `config.yaml` for the installation process.
Replace `license` and `subdomain` with your own values, and initialize your Helm configuration file with these settings:

```yaml title="config.yaml"
// highlight-next-line
license: "REPLACE ME WITH YOUR OKTETO LICENSE"
// highlight-next-line
subdomain: "REPLACE ME WITH YOUR OKTETO DOMAIN"

buildkit:
  persistence:
    enabled: true

registry:
  storage:
    filesystem:
      persistence:
        enabled: true
```

_Note: This is the minimum configuration. Check our [Helm configuration](self-hosted/helm-configuration.mdx) docs to learn more_

### Installing the Okteto Helm chart

Install the latest version of Okteto by running:

<CodeBlock language="bash">
  {`helm upgrade --install okteto okteto/okteto -f config.yaml --namespace=okteto --create-namespace --version=${variables.chartVersion}`}
</CodeBlock>

After a few seconds, all the resources will be created. The output will look something like this:

```bash
Release "okteto" has been installed. Happy Helming!
NAME: okteto
LAST DEPLOYED: Thu Mar 26 18:07:55 2020
NAMESPACE: okteto
STATUS: deployed
```

### Retrieve the Ingress Controller IP address

You can use `kubectl` to fetch the address that has been dynamically allocated by DigitalOcean to the NGINX Ingress you've just installed and configured as a part of Okteto:

```bash
kubectl get service -l=app.kubernetes.io/name=ingress-nginx,app.kubernetes.io/component=controller --namespace=okteto
```

The output will look something like this:

```bash
NAME                             TYPE           CLUSTER-IP     EXTERNAL-IP     PORT(S)                                     AGE
okteto-ingress-nginx-controller  LoadBalancer   10.245.147.23  64.225.83.163   80:30087/TCP,443:31799/TCP,1234:31412/TC    2m
```

You'll need to take the `EXTERNAL-IP` address, and add it to your DNS for the domain you have chosen to use. This is done by creating an `A` record with the name `*`.

### Sign in to your Okteto instance

:::warning

**Important**: The default installation is not recommended for production use. We highly advise configuring a [wildcard certificate](self-hosted/install/certificates/index.mdx) and [Okteto Registry storage with DigitalOcean Spaces](self-hosted/install/okteto-registry-storage/digitalocean-spaces.mdx) after finishing your evaluation and giving your team access to your Okteto instance.

:::

After a successful installation, you can access your Okteto instance at `https://okteto.SUBDOMAIN`. Your account will be automatically created as part of the login process. The first user to successfully login into the instance will be automatically assigned the `administrator` role.

Once your Okteto instance is up and running, you're going to [install and configure the Okteto CLI](get-started/install-okteto-cli.mdx) with your Okteto instance.
